no more inline object, lots of clean up
