# node-sdk/src/openapi/apis/InvoicesApi.ts
@@ -8,9 +8,9 @@ import {canConsumeForm, isCodeInRange} from '../util';
 import {SecurityAuthentication} from '../auth/auth';
 
 
-import { InlineObject2 } from '../models/InlineObject2';
 import { InlineResponse2002 } from '../models/InlineResponse2002';
 import { Invoice } from '../models/Invoice';
+import { InvoiceData } from '../models/InvoiceData';
 
 /**
  * no description
@@ -20,9 +20,9 @@ export class InvoicesApiRequestFactory extends BaseAPIRequestFactory {
     /**
      * Create Invoice
      * @param prismAccount The ID of the connected Prism account you are making a request on behalf on.
-     * @param inlineObject2 
+     * @param invoiceData 
      */
-    public async create(prismAccount?: string, inlineObject2?: InlineObject2, _options?: Configuration): Promise<RequestContext> {
+    public async create(prismAccount?: string, invoiceData?: InvoiceData, _options?: Configuration): Promise<RequestContext> {
         let _config = _options || this.configuration;
 
 
@@ -46,7 +46,7 @@ export class InvoicesApiRequestFactory extends BaseAPIRequestFactory {
         ]);
         requestContext.setHeaderParam("Content-Type", contentType);
         const serializedBody = ObjectSerializer.stringify(
-            ObjectSerializer.serialize(inlineObject2, "InlineObject2", ""),
+            ObjectSerializer.serialize(invoiceData, "InvoiceData", ""),
             contentType
         );
         requestContext.setBody(serializedBody);
@@ -97,6 +97,49 @@ export class InvoicesApiRequestFactory extends BaseAPIRequestFactory {
         if (sort !== undefined) {
             requestContext.setQueryParam("sort", ObjectSerializer.serialize(sort, "any", ""));
         }
+
+        // Query Params
+        if (expand !== undefined) {
+            requestContext.setQueryParam("expand", ObjectSerializer.serialize(expand, "string", ""));
+        }
+
+        // Header Params
+        requestContext.setHeaderParam("Prism-Account", ObjectSerializer.serialize(prismAccount, "string", ""));
+
+
+        
+        const defaultAuth: SecurityAuthentication | undefined = _options?.authMethods?.default || this.configuration?.authMethods?.default
+        if (defaultAuth?.applySecurityAuthentication) {
+            await defaultAuth?.applySecurityAuthentication(requestContext);
+        }
+
+        return requestContext;
+    }
+
+    /**
+     * Poll Invoice By ID
+     * @param id 
+     * @param prismAccount The ID of the connected Prism account you are making a request on behalf on.
+     * @param expand Specifies which fields to populate in the response.
+     */
+    public async poll(id: string, prismAccount?: string, expand?: string, _options?: Configuration): Promise<RequestContext> {
+        let _config = _options || this.configuration;
+
+        // verify required parameter 'id' is not null or undefined
+        if (id === null || id === undefined) {
+            throw new RequiredError("InvoicesApi", "poll", "id");
+        }
+
+
+
+
+        // Path Params
+        const localVarPath = '/invoices/{id}/poll'
+            .replace('{' + 'id' + '}', encodeURIComponent(String(id)));
+
+        // Make Request Context
+        const requestContext = _config.baseServer.makeRequestContext(localVarPath, HttpMethod.GET);
+        requestContext.setHeaderParam("Accept", "application/json, */*;q=0.8")
 
         // Query Params
         if (expand !== undefined) {
@@ -254,6 +297,31 @@ export class InvoicesApiResponseProcessor {
                 ObjectSerializer.parse(await response.body.text(), contentType),
                 "InlineResponse2002", ""
             ) as InlineResponse2002;
+            return body;
+        }
+
+        throw new ApiException<string | Blob | undefined>(response.httpStatusCode, "Unknown API Status Code!", await response.getBodyAsAny(), response.headers);
+    }
+
+    /**
+     * Unwraps the actual response sent by the server from the response context and deserializes the response content
+     * to the expected objects
+     *
+     * @params response Response returned by the server for a request to poll
+     * @throws ApiException if the response code was not in [200, 299]
+     */
+     public async poll(response: ResponseContext): Promise<void > {
+        const contentType = ObjectSerializer.normalizeMediaType(response.headers["content-type"]);
+        if (isCodeInRange("200", response.httpStatusCode)) {
+            return;
+        }
+
+        // Work around for missing responses in specification, e.g. for petstore.yaml
+        if (response.httpStatusCode >= 200 && response.httpStatusCode <= 299) {
+            const body: void = ObjectSerializer.deserialize(
+                ObjectSerializer.parse(await response.body.text(), contentType),
+                "void", ""
+            ) as void;
             return body;
         }
 
