# node-sdk/src/openapi/models/APIKey.ts
@@ -10,32 +10,23 @@
  * Do not edit the class manually.
  */
 
+import { APIKeyAllOf } from './APIKeyAllOf';
 import { Account } from './Account';
+import { Model } from './Model';
 import { HttpFile } from '../http/http';
 
 export class APIKey {
-    'account'?: string | Account;
-    'admin'?: boolean;
     'created': Date;
     'id': string;
+    'test': boolean;
+    'account': string | Account;
+    'admin': boolean;
     'key': string;
     'type': APIKeyTypeEnum;
 
     static readonly discriminator: string | undefined = undefined;
 
     static readonly attributeTypeMap: Array<{name: string, baseName: string, type: string, format: string}> = [
-        {
-            "name": "account",
-            "baseName": "account",
-            "type": "string | Account",
-            "format": ""
-        },
-        {
-            "name": "admin",
-            "baseName": "admin",
-            "type": "boolean",
-            "format": ""
-        },
         {
             "name": "created",
             "baseName": "created",
@@ -46,6 +37,24 @@ export class APIKey {
             "name": "id",
             "baseName": "id",
             "type": "string",
+            "format": ""
+        },
+        {
+            "name": "test",
+            "baseName": "test",
+            "type": "boolean",
+            "format": ""
+        },
+        {
+            "name": "account",
+            "baseName": "account",
+            "type": "string | Account",
+            "format": ""
+        },
+        {
+            "name": "admin",
+            "baseName": "admin",
+            "type": "boolean",
             "format": ""
         },
         {
